--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -116,6 +116,7 @@
     const SITE_LIST = [
       ['google', ''],
       ['youtube', ''],
+      ['pornhub', ''],
       ['twitter', 'twitter.com/google'],
       ['flickr', ''],
       ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
